issue #469: Upgrade JAXB and JAXWS deps to JAVA 8 version