@@ -26,12 +26,6 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.sun.xml.ws</groupId>
-            <artifactId>jaxws-rt</artifactId>
-            <version>2.2.6-2</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
             <version>${jerseyVersion}</version>
@@ -94,13 +88,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
 
-            <!--JAX-WS 2.2 JDK 1.6 support-->
-            <!--soapclient-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>
-
             <plugin>
                 <groupId>org.jvnet.jax-ws-commons</groupId>
                 <artifactId>jaxws-maven-plugin</artifactId>
@@ -124,7 +111,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Djava.endorsed.dirs="${endorsed.dir}"</argLine>
                     <systemPropertiesFile>${proarc-desa.junit.properties.file}</systemPropertiesFile>
                 </configuration>
             </plugin>
